# ev3-cpp-cmake

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CMakeUserPresets.json  CODE_OF_CONDUCT.md  Doxyfile  README.md  SECURITY.md  TODO.md  codeCoverage.py  conanfile.txt  count.py  destinations.list  destinations.yaml  main.cpp  test.cpp
doc/: CMakeLists.txt
lib/: CMakeLists.txt  EV3_conf.hpp  EV3_macros.hpp  lv_conf.h
lib/compute/: CMakeLists.txt
lib/compute/include/: EV3_compute.hpp  EV3_compute_local.hpp  EV3_compute_tcp.hpp
lib/compute/src/: CMakeLists.txt  EV3_compute.cpp  EV3_compute_local.cpp  EV3_compute_tcp.cpp
lib/compute/test/: CMakeLists.txt  test_EV3_compute.cpp  test_EV3_compute_tcp.cpp  test_SmoothPath.cpp
lib/console/: CMakeLists.txt  FileLogger.cpp  FileLogger.hpp  Logger.cpp  Logger.hpp
lib/display/: CMakeLists.txt  Screen.cpp  Screen.hpp  Window.cpp  Window.hpp  WindowManager.cpp  WindowManager.hpp
lib/display/bitmaps/: Bitmaps.hpp  CMakeLists.txt
lib/engines/: CMakeLists.txt
lib/engines/gearbox/: CMakeLists.txt
lib/engines/location/: CMakeLists.txt  LocationEngine.cpp  LocationEngine.hpp
lib/engines/movement/: CMakeLists.txt  MovementEngine.cpp  MovementEngine.hpp  MovementParser.cpp  MovementParser.hpp
lib/filesystem/: CMakeLists.txt
lib/filesystem/include/: EV3_MotorManager.hpp  EV3_SensorManager.hpp  EV3_test_filesystem.cpp  Fakesys.hpp
lib/filesystem/src/: CMakeLists.txt  DeviceManager.cpp  DeviceManager.hpp  EV3_MotorManager.cpp  EV3_SensorManager.cpp  MotorManager.cpp  SensorManager.cpp
lib/filesystem/test/: CMakeLists.txt  Fakesys.cpp  Fakesys.hpp  SensorManager.test.cpp  test.cpp  testDeviceManager.cpp  testFakesys.cpp  testMotorManager.cpp
lib/gearbox/: CMakeLists.txt
lib/gearbox/include/: EV3_Gearbox.hpp  EV3_ToolControl.hpp
lib/gearbox/src/: CMakeLists.txt  EV3_Gearbox.cpp  EV3_ToolControl.cpp
lib/gearbox/test/: CMakeLists.txt  EV3_Gearbox.test.cpp
lib/log/: CMakeLists.txt  FileLogger.cpp  FileLogger.hpp  Logger.cpp  Logger.hpp
lib/log/include/: FileLogger.hpp  Logger.hpp
lib/log/src/: FileLogger.cpp  Logger.cpp
lib/log/test/: CMakeLists.txt  Logger.test.cpp
lib/math/: CMakeLists.txt  Line.cpp  Line.hpp  Vector2.hpp  Vector3.cpp  Vector3.hpp
lib/math/include/: Line.hpp  Vector2.hpp  Vector3.hpp
lib/math/src/: CMakeLists.txt  Line.cpp  Vector2.cpp  Vector3.cpp
lib/math/test/: CMakeLists.txt  test_Line.cpp  test_Vector2.cpp  test_Vector3.cpp
lib/movement/: CMakeLists.txt
lib/movement/include/: EV3_MovementCalibration.hpp  EV3_MovementEngine.hpp  MovementEngine.hpp
lib/movement/src/: CMakeLists.txt  EV3_MovementCalibration.cpp  EV3_MovementEngine.cpp  MovementEngine.cpp  MovementParser.cpp
lib/obstacles/: CMakeLists.txt  obstacles_example.yaml
lib/obstacles/include/: EV3_ObstacleManager.hpp
lib/obstacles/src/: CMakeLists.txt  EV3_ObstacleManager.cpp
lib/pf/: AStar.cpp  CMakeLists.txt  ObstacleManager.cpp  ObstacleManager.hpp  SmoothPath.cpp  SmoothPath.hpp
lib/physical/: CMakeLists.txt  DeviceManager.cpp  DeviceManager.hpp  MotorManager.cpp  MotorManager.hpp  SensorManager.cpp  SensorManager.hpp
lib/physical/buttons/: ButtonNotifier.cpp  ButtonNotifier.hpp  CMakeLists.txt
lib/physical/display/: CMakeLists.txt  Screen.cpp  Screen.hpp  Window.cpp  Window.hpp  WindowManager.cpp  WindowManager.hpp
lib/physical/portManager/: CMakeLists.txt  PortManager.cpp  PortManager.hpp
lib/position/: CMakeLists.txt
lib/position/include/: Position.hpp
lib/position/src/: CMakeLists.txt  MotorPosition.cpp  MotorPosition.hpp  Position.cpp  SensorPosition.cpp  SensorPosition.hpp
lib/server/: CMakeLists.txt  ServerManager.hpp
lib/server/webServer/: CMakeLists.txt  webServer.cpp  webServer.hpp
lib/system/: CMakeLists.txt
lib/system/display/: CMakeLists.txt  GraphicalInterface.hpp
lib/system/include/: EV3_System.hpp  EV3_System_tcp.hpp
lib/system/init/: CMakeLists.txt
lib/system/src/: CMakeLists.txt  ConfigReader.cpp  ConfigReader.hpp  EV3_System.cpp  EV3_System_tcp.cpp  YamlReader.cpp  YamlReader.hpp
lib/system/test/: CMakeLists.txt  test_EV3_System.cpp
lib/tcp/: CMakeLists.txt
lib/tcp/include/: EV3_tcp_communication_client.hpp  EV3_tcp_communication_server.hpp
lib/tcp/src/: CMakeLists.txt  EV3_tcp_communication_client.cpp  EV3_tcp_communication_server.cpp
lib/tcp/test/: CMakeLists.txt  test_tcp_connection.cpp
lib/utility/: CMakeLists.txt
lib/utility/RobotMovement/: CMakeLists.txt  MovementAction.cpp  MovementAction.hpp  RobotMovement.cpp  RobotMovement.cpp.old  RobotMovement.hpp
lib/utility/UserInterface/: CMakeLists.txt  UserInterface.cpp  UserInterface.hpp
src/: CMakeLists.txt  ColorAppender.cpp  ColorAppender.hpp  main.cpp  src.test.cpp  test.cpp  tests.cpp
src/console/: CMakeLists.txt  Logger.cpp  Logger.hpp  Logger.test.cpp
src/math/: CMakeLists.txt  Vector2.cpp  Vector2.hpp  Vector2.test.cpp  Vector3.hpp  Vector3.test.cpp
src/physical/: CMakeLists.txt  DeviceManager.cpp  DeviceManager.hpp  Devices.test.cpp  Motor.hpp  Sensor.hpp  SensorManager.cpp  SensorManager.hpp  physical.test.cpp
src/physical/buttons/: ButtonNotifier.cpp  ButtonNotifier.hpp  CMakeLists.txt
src/physical/display/: CMakeLists.txt  Screen.cpp  Screen.hpp  Window.cpp  Window.hpp  WindowManager.cpp  WindowManager.hpp
src/server/: CMakeLists.txt  ServerManager.hpp  webServer.hpp
src/utility/: CMakeLists.txt
tests/: Bitmaps.test.cpp  ButtonNotifier.test.cpp  CMakeLists.txt  ComponentFactory.test.cpp  ComponentFullBody.test.cpp  DeviceManager.test.cpp  GearboxEngine.test.cpp  GraphicalInterface.test.cpp  Line.test.cpp  LocationEngine.test.cpp  Logger.test.cpp  MotorManager.test.cpp  MotorPort.test.cpp  MovementEngine.test.cpp  MovementParser.test.cpp  Port.test.cpp  PortManager.test.cpp  RobotMovement.test.cpp  SensorManager.test.cpp  SensorPort.test.cpp  ServerManager.test.cpp  UserInterface.test.cpp  Vector2.test.cpp  Vector3.test.cpp  WebComponentBase.test.cpp  catch2.cpp  cleanupFiles.test.cpp  initFiles.test.cpp  test2.cpp  webServer.test.cpp
(+87 files in other folders)
