add_subdirectory(physical)
add_subdirectory(log)
add_subdirectory(math)
add_subdirectory(server)
add_subdirectory(utility)
add_subdirectory(filesystem)
add_subdirectory(compute)
add_subdirectory(engines)
add_subdirectory(position)
add_subdirectory(system/init)
add_subdirectory(tcp)
add_subdirectory(gearbox)
add_subdirectory(display)

if (BUILD_INTERNAL_TCP_SERVER)
endif()